<resources>
    <string name="app_name">Клиника \"Будьте больны\"</string>
    <string name="addBtn">Добавить</string>
    <string name="removeBtn">Удалить</string>
    <string name="addPatientSurname">Фамилия</string>
    <string name="addPatientName">Имя</string>
    <string name="addPatientPatronymic">Отчество</string>
    <string name="addPhoneNumber">Номер телефона</string>
    <string name="dateOfBirth">Дата рождения</string>
    <string name="editBtn">Изменить</string>
    <string name="cancelBtn">Отмена</string>
    <string name="saveBtn">Сохранить</string>
    <string name="readBtn">Прочитать</string>
    <string name="patients">Пациенты</string>
    <string name="therapies">Лекарства</string>
    <string name="addTherapyName">Название</string>
    <string name="addTherapyImportant">Срочность</string>
    <string name="addTherapyScopeArea">Область действия</string>
    <string name="editTherapiesBtn">Изменить лекарства</string>
    <string name="policlynicName">Клиника \"Будьте больны\"</string>
    <string name="tapToLoad">Нажмите чтобы продолжить</string>
    <string name="loginBtn">Войти</string>
    <string name="registrationBtn">Регистрация</string>
    <string name="loginText">Логин</string>
    <string name="passwordText">Пароль</string>
    <string name="emailText">Почта</string>
    <string name="adminText">Администратор</string>
    <string name="report">Отчёт</string>
    <string name="procedures">Процедуры</string>
    <string name="addProcedureName">Название</string>
    <string name="addProcedureDescription">Описание</string>
    <string name="addProcedurePrice">Цена</string>
    <string name="editProcedureBtn">Изменить процедуры</string>
</resources>